--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.1.1",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "puppeteer": "^24.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.60.0",
